# php/app/Http/Controllers/NewsController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use App\Models\News;
 use Illuminate\Http\Request;
 use App\Http\Requests\NewsRequest;
+use MongoDB\BSON\ObjectId;
 
 /**
  * @OA\Get(
@@ -78,32 +79,38 @@ use App\Http\Requests\NewsRequest;
  *         description="Successful response"
  *     )
  * )
- *  @OA\put(
- *     path="/api/v1/news/update/{id}",
+ * @OA\Post(
+ *     path="/api/v1/news/update/{id}?_method=PUT",
  *     tags={"News Routes"},
- *     summary="Update News",
+ *     summary="Update a News by ID",
  *     @OA\Parameter(
  *         name="id",
  *         in="path",
- *         description="object id",
  *         required=true,
- *         @OA\Schema(type="string")
+ *         @OA\Schema(
+ *             type="string"
+ *         ),
+ *         description="ID of the news item to update"
  *     ),
  *     @OA\RequestBody(
  *         required=true,
- *         @OA\JsonContent(
- *             required={""},
- *             @OA\Property(property="specialtyID", type="string", example=""),
- *             @OA\Property(property="title", type="string", example="Title of the new News"),
- *             @OA\Property(property="image", type="string", example="Image of the new News"),
- *             @OA\Property(property="content", type="string", example="content of the new News"),
- *             @OA\Property(property="author", type="string", example="author of the new News"),
- *             @OA\Property(property="isHidden", type="boolean", example=false),
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 required={},
+ *                 @OA\Property(property="specialtyID", type="string", example="1"),
+ *                 @OA\Property(property="title", type="string", example="Title of the new News"),
+ *                @OA\Property(property="file", type="string", format="binary", description="Image file"),
+ *                 @OA\Property(property="content", type="string", example="Content of the new News"),
+ *                 @OA\Property(property="author", type="string", example="Author of the new News"),
+ *                 @OA\Property(property="isHidden", type="boolean", example=false)
+ *             )
  *         )
  *     ),
  *     @OA\Response(
  *         response=200,
- *         description="Successful response",
+ *         description="Successful response"
  *     )
  * )
  *  @OA\delete(
@@ -234,7 +241,6 @@ class NewsController extends Controller
             if (!$request->hasFile('file') || checkValidImage($request->file)) {
                 return createError(400, 'No image uploaded!');
             }
-
             $image = uploadImage($request->file);
             $request->merge(['image' => $image]);
 
